# GearLib

./: .gitmodules  CMakeLists.txt  README.md  make.py
app/: CMakeLists.txt
lib/: CMakeLists.txt
lib/cxxurl/: CMakeLists.txt  cxxurl.cpp  main.cpp  url.hpp
src/: CMakeLists.txt  main.cpp
src/adapters/: CMakeLists.txt  djingSoftwareAdapterFactory.cpp  djingSoftwareAdapterFactory.hpp  fileIO.cpp  fileIO.hpp  rekordboxAdapter.cpp  rekordboxAdapter.hpp  virtualDJAdapter.cpp  virtualDJAdapter.hpp
src/domain/: CMakeLists.txt  constants.hpp  libraryConverter.cpp  libraryConverter.hpp  tracksLibrary.cpp  tracksLibrary.hpp
src/domain/dto/: CMakeLists.txt  color.hpp  cues.hpp  tags.hpp  tempo.hpp  tonality.hpp  track.hpp
src/domain/ports/: CMakeLists.txt  dataIOInterface.hpp  djingSoftwareInterface.hpp
src/libraries/: CMakeLists.txt
src/libraries/cxxUrl/: CMakeLists.txt  url.cpp
src/libraries/pugixml/: CMakeLists.txt
test/: CMakeLists.txt  main_tests.cpp
