# =============================================================================
# Google Test
# =============================================================================
add_subdirectory(googletest)

# =============================================================================
# PugiXML
# =============================================================================
add_subdirectory(pugixml)

# =============================================================================
# Argparse
# =============================================================================
add_subdirectory(argparse)
target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC argparse/include)

# =============================================================================
# cxxurl
# =============================================================================
add_library(
	cxxurl
	./cxxurl/cxxurl.cpp
    ./cxxurl/cxxurl.hpp
)
target_include_directories(cxxurl PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/cxxurl")